--- a/index.html
+++ b/index.html
@@ -60,6 +60,33 @@
             </div>
 
         </section>
+        <!-- what I do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">what I do</h3>
+            <!-- .skill-container>.skill*4>img+.skill-title+.skill-description>lorem15 -->
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <div class="skill-title">Vanilla Java Script</div>
+                    <div class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis vero distinctio soluta dicta dolorem nostrum?</div>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <div class="skill-title"></div>
+                    <div class="skill-description">Accusamus, aspernatur velit aperiam quis unde iure recusandae dignissimos odit sequi nostrum voluptatum incidunt possimus?</div>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <div class="skill-title">Node.js</div>
+                    <div class="skill-description">Obcaecati, velit. Enim, architecto. Nisi dignissimos sed nostrum, qui iure voluptatibus vero illum nemo ullam?</div>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <div class="skill-title">MongoDB</div>
+                    <div class="skill-description">Commodi atque quod fuga quisquam doloremque molestiae iste esse suscipit ratione tenetur? Fuga, dolor aspernatur.</div>
+                </div>
+            </div>
+        </section>
      
     </main>
     <footer>
